# chewie-auth

./: CHANGELOG.md  Cargo.toml  README.md
examples/: authorization_code.rs  client_credentials.rs
src/: error.rs  http.rs  lib.rs  oauth2_form.rs  platform.rs  prelude.rs
src/authorizer/: mod.rs
src/cache/: mod.rs
src/client_auth/: client_id_only.rs  client_secret.rs  jwt_bearer.rs  mod.rs
src/crypto/signer/: mod.rs  trait.rs
src/crypto/signer/native/: es256.rs  es384.rs  es512.rs  hmac.rs  mod.rs  rsa.rs
src/crypto/signer/resolver/: mod.rs
src/crypto/signer/webcrypto/: mod.rs
src/dpop/: mod.rs
src/grant/: client_credentials.rs  core.rs  mod.rs  refresh.rs
src/grant/authorization_code/: flow.rs  grant.rs  mod.rs  pkce.rs  redirect_url.rs
src/grant/authorization_code/flow/: loopback.rs  mod.rs  par.rs
src/grant/core/: form.rs  mod.rs
src/grant/device_authorization/: flow.rs  grant.rs  mod.rs
src/http/: mod.rs  reqwest_0_13.rs
src/jwk/: jwks.rs  mod.rs
src/jwt/: builder.rs
src/native/: mod.rs
src/native/asymmetric/public/: ec.rs  mod.rs
src/oidc/: discovery.rs  mod.rs
src/secrets/: encodings.rs  providers.rs  secret.rs
src/server_metadata/: mod.rs
src/signer/: error.rs  mod.rs  trait.rs
src/signer/native/: es256.rs  es384.rs  es512.rs
src/signer/webcrypto/: mod.rs
src/signer/webcrypto/helpers/: generate_key.rs  mod.rs  public_key.rs  serialize.rs  sign.rs
src/token/: access_token.rs
